[package]
name = "cggtts"
version = "0.1.0"
license = "MIT OR Apache-2.0"
license-file = "License.txt"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to handle and create CGGTTS data"
homepage = "https://github.com/gwbres/cggtts"
keywords = ["positionning","time transfer","bipm","gnss","timing","common view","satellites"]
edition = "2018"
readme = "README.md"

[dependencies]
regex = "1"
thiserror = "1"
chrono = "0.4"
julianday = "0.2.0"
scan_fmt = "0.1"
geo-types = "0.7.2"
