[package]
name = "cggtts"
version = "0.1.8"
license-file = "LICENSE"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to analyze and create CGGTTS data"
homepage = "https://github.com/gwbres/cggtts"
keywords = ["positionning","bipm","gnss","timing","satellites"]
categories = ["science","parsing"]
edition = "2018"
readme = "README.md"

exclude = ["data/",]

[dependencies]
regex = "1"
thiserror = "1"
chrono = "0.4"
julianday = "0.2.0"
scan_fmt = "0.1"

[dev-dependencies]
float-cmp = "0.9.0"
