[package]
name = "cggtts-cli"
version = "1.0.7"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Command line tool parse and analyze CGGTTS data"
homepage = "https://github.com/gwbres/cggtts"
keywords = ["parser", "gps", "glonass", "galileo", "timing"]
categories = ["science", "command-line-interface", "command-line-utilities"]
edition = "2018"
readme = "../README.md"

[dependencies]
log = "0.4"
walkdir = "2.4.0"
itertools = "0.13.0"
env_logger = "0.11"
clap = { version = "4.4.6", features = ["derive", "color"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
cggtts = { path = "../cggtts", version = "=4.1.6" }
plotly =  "0.8.4"
# plotly = { git = "https://github.com/gwbres/plotly", branch = "density-mapbox" }
