[package]
name = "cggtts"
version = "4.1.5"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to analyze and create CGGTTS data"
homepage = "https://github.com/gwbres/cggtts"
keywords = ["positionning","bipm","gnss","timing","satellites"]
categories = ["science","parsing"]
edition = "2018"
readme = "../README.md"

[features]
default = [] # no features by default

# unlock the Track Scheduling and data production helpers
scheduler = ["polyfit-rs"]

[dependencies]
thiserror = "1"
scan_fmt = "0.1"
strum = "0.23.0"
itertools = "0.11.0"
strum_macros = "0.23.0"
gnss-rs = { version = "2.2.1", features = ["serde"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
hifitime = { version = "4.0.0-alpha", features = ["serde", "std"] }

# track scheduling
polyfit-rs = { version = "0.2.1", optional = true }

[dev-dependencies]
rand = "0.8.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]
