[package]
name = "cggtts"
version = "4.1.7"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to analyze and create CGGTTS data"
homepage = "https://github.com/gwbres/cggtts"
keywords = ["positionning","bipm","gnss","timing","satellites"]
categories = ["science","parsing"]
edition = "2018"
readme = "../README.md"

[features]
default = [] # no features by default

# The tracker features unlock the
# SkyTracker structure, that facilitates common view tracking
# and integrates a fitting method based on BIPM recommendations.
tracker = ["polyfit-rs"]

[dependencies]
thiserror = "2"
scan_fmt = "0.1.3"
strum = "0.26"
itertools = "0.13"
strum_macros = "0.26"
serde = { version = "1.0", optional = true, features = ["derive"] }

hifitime = { version = "4.0", features = ["serde", "std"] }

# gnss-rs = { version = "2.2.4", features = ["serde"] }
gnss-rs = { git = "https://github.com/rtk-rs/gnss", branch = "main", features = ["serde"] }

# track scheduling
polyfit-rs = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]
