[package]
name = "cggtts"
version = "4.1.7"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "CGGTTS files parsing and production"
homepage = "https://github.com/gwbres/cggtts"
keywords = ["navigation", "gnss", "timing", "space"]
categories = ["science","parsing"]
edition = "2018"
readme = "../README.md"

[features]
default = []

# unlock gzip file native support
flate2 = ["dep:flate2"]

# unlock serdes operations
serde = [
    "dep:serde", 
    "hifitime/serde",
    "gnss-rs/serde",
]

# unlock helper to fit several measurements during 
# a CommonViewPeriod, following BIPM recommendations.
polyfit-rs = ["dep:polyfit-rs"]

[dependencies]
thiserror = "2"
scan_fmt = "0.1.3"
strum = "0.26"
itertools = "0.13"
strum_macros = "0.26"
flate2 = { version = "1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

hifitime = { version = "4.0", features = ["std"] }

# gnss-rs = "2.2.4"
gnss-rs = { git = "https://github.com/rtk-rs/gnss", branch = "main" }

# track scheduling
polyfit-rs = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]
