[package]
name = "cggtts-cli"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Command line tool parse and analyze CGGTTS data"
homepage = "https://github.com/gwbres/cggtts"
keywords = ["parser", "gps", "glonass", "galileo", "timing"]
categories = ["science", "command-line-interface", "command-line-utilities"]
edition = "2018"
readme = "README.md"

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
rinex = "0.3.3" 
cggtts = { path = "../cggtts" }
clap = { version = "~2.27.0", features = ["yaml"] }
# gnuplot = "0.0.37"
